@@ -1,4 +1,5 @@
 require 'gecoder/interface/binding_changes'
+require 'gecoder/interface/variables'
 require 'gecoder/interface/model'
 require 'gecoder/interface/search'
 require 'gecoder/interface/constraints'
